# asyncfiles

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
asyncfiles/: __init__.py  __init__.pyi  base_file.pxd  base_file.pyx  binary_file.pxd  binary_file.pyx  buffer_manager.pxd  buffer_manager.pyx  callbacks.c  callbacks.pxd  callbacks.pyx  context.pxd  cpython.pxd  event_loop.pxd  event_loop.pyx  file_io.pxd  file_io.pyx  files.c  files.pyx  io_operations.pxd  io_operations.pyx  iterators.pxd  iterators.pyx  memory_utils.pxd  memory_utils.pyx  text_file.pxd  text_file.pyx  types.py  utils.c  utils.pxd  utils.pyx  uv.pxd
benchmark/: benchmark.py  benchmark_initial.py  benchmark_read.py  benchmark_readlines.py  benchmark_write.py
benchmark/results/: READ_BENCHMARK.md  WRITE_BENCHMARK.md
tests/: conftest.py  test_files.py
